--- a/start_point/manifest.json
+++ b/start_point/manifest.json
@@ -1,14 +1,14 @@
 {
   "display_name": "Java, Mockito",
-
-  "visible_filenames": [
+  "image_name": "cyberdojofoundation/java_mockito",
+  "visible_filenames":
+  [
     "HikerTest.java",
     "Hiker.java",
     "HikerHelper.java",
     "cyber-dojo.sh"
   ],
-
-  "image_name": "cyberdojofoundation/java_mockito",
-
-  "filename_extension": ".java"
+  "filename_extension": [ ".java" ],
+  "max_seconds": 10,
+  "tab_size": 4
 }
