--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -1,4 +1,4 @@
-FROM cyberdojofoundation/java-14
+FROM cyberdojofoundation/java-14:e3b69b5
 LABEL maintainer=jon@jaggersoft.com
 
 COPY /jars/* /mockito/
